[gd_scene load_steps=5 format=3 uid="uid://b25jm5b0albnx"]

[ext_resource type="Script" path="res://scripts/npc/villager_adam_florien.gd" id="2_fdl8j"]
[ext_resource type="SpriteFrames" uid="uid://cqfuc03kln7jk" path="res://scenes/npc/villager_adam_florien.tres" id="2_uin6m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5txfa"]
size = Vector2(30, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tb3vd"]
size = Vector2(43, 54)

[node name="adam_florien" type="CharacterBody2D"]
script = ExtResource("2_fdl8j")

[node name="adam_florien_sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_uin6m")
animation = &"attack_slash_north"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10.5)
shape = SubResource("RectangleShape2D_5txfa")

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(-0.5, 4)
shape = SubResource("RectangleShape2D_tb3vd")
